# neodo

./: .env.template  .gitignore
.devcontainer/: .env.template  devcontainer.json
backend/: Cargo.toml  Makefile.toml  docker-compose.yml  error.rs  run.sh
backend/db/: database.sqlite
backend/entity/: Cargo.toml  lib.rs  prelude.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_user_table.rs
backend/src/: config.rs  error.rs  main.rs
backend/src/config/: config.rs
backend/src/domain/: user_service.rs
backend/src/service/: user_service.rs
