[package]
name = "neodo"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Horn <hortw1991@gmail.com>"]

[workspace]
members = [".", "migration", "entity"]

[dependencies]
# argon2 = "0.5.2"
axum = "0.6.20"
# axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
# jsonwebtoken = "9.1.0"
# rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.192", features = ["derive"] }
# serde_json = "1.0.108"
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "time",
    "debug-print",
] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
# uuid = { version = "1.5.0", features = ["serde", "v4"] }

## Wor Paths ##
migration = { path = "migration" }
entity = { path = "entity" }
